Day2/Module9/Task1/flux/sre-course-infra/instructor-dev/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: orderbook
  namespace: instructor-dev
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  rules:
    - host: instructordev.computerlab.online
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: orderbookapi
              port:
                number: 8080
